# botpporojones_v3

./: .coveragerc  .gitignore  Containerfile  Makefile  mkdocs.yml  pyproject.toml  setup.py
botpporojones/: __main__.py
test/: conftest.py  main_test.py
